# loom-terminal

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  biome.json  clippy.toml  package.json  rust-toolchain.toml  rustfmt.toml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-bun-lock.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: AddShellsPrompt.tsx  App.css  App.tsx  AppHeader.tsx  ConfirmCloseModal.tsx  ConfirmDialog.tsx  CopyButton.tsx  ErrorBoundary.tsx  KeybindingsEditor.tsx  KeyboardHelpOverlay.tsx  MainPanes.tsx  Modal.tsx  PaneContextMenu.tsx  PortsPanel.tsx  RateLimitBadge.tsx  SecondaryButton.tsx  SettingsPage.tsx  Sidebar.tsx  Skeleton.tsx  TabSwitcher.tsx  TerminalView.tsx  ThemeChip.tsx  ThemeEditor.tsx  Toolbar.tsx  WebPreviewPane.tsx  Welcome.tsx  Workspace.tsx  WorkspaceTab.tsx  agents.ts  format.ts  keybindings.test.ts  keybindings.ts  main.tsx  notificationSound.ts  paneWriters.ts  platform.ts  presets.ts  recentCommands.ts  sessionPersist.test.ts  sessionPersist.ts  (+15 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: ansi.rs  atomic_write.rs  attach.rs  constants.rs  env_validate.rs  hook.rs  hook_codex.rs  hook_common.rs  hook_consent.rs  hook_gemini.rs  lib.rs  loom-codex-stop-hook.sh  loom-gemini-session-hook.sh  loom-stop-hook.sh  main.rs  port_cmds.rs  port_detect.rs  pty.rs  pty_buffer.rs  rate_limits.rs  shell_env.rs  stops_poller.rs  usage_poller.rs  workspace_cmds.rs
apps/desktop/src-tauri/src/pty/: commands.rs  probe.rs  reader.rs  spawn.rs
apps/desktop/src/welcome/: Chrome.tsx  ComposerSection.tsx  HookFooter.tsx  PresetsSection.tsx  internals.ts
docs/: ARCHITECTURE.md  feature-inventory.md
